# CCTalk-PAYLINK-Integration

./: Paylink Integration and Important Concepts.docx
CCTalk Java Test IDEA Project/src/: CoinMechEnum.java  Tester.java
PAYLINK SETUP FILES/PayLink Distribution/: ftdibus.cat
PAYLINK SETUP FILES/PayLink Distribution/Currency Set/: Custom EU Currency Set.sr5
PAYLINK SETUP FILES/PayLink Distribution/Linux/LinuxCoinRead/: CoinRead.c  makefile
PAYLINK SETUP FILES/PayLink Distribution/Linux/LinuxDemo/: AESDemo.desktop.in  AESDemo.gladep  AESDemo.prj  Makefile.in  aclocal.m4  configure  configure.in
PAYLINK SETUP FILES/PayLink Distribution/Linux/LinuxDemo/src/: ImheiEvent.c  Makefile  Makefile.am  callbacks.c  callbacks.h  data_funcs.c  data_funcs.h  support_borked.c  support_borked.h
PAYLINK SETUP FILES/PayLink Distribution/Linux/LinuxDemo/src/.deps/: callbacks.Po  support.Po
PAYLINK SETUP FILES/PayLink Distribution/Linux/LinuxPayOut/: PayOut
PAYLINK SETUP FILES/PayLink Distribution/Linux/LuminaSerialNo/: LuminaSerial
PAYLINK SETUP FILES/PayLink Distribution/PayLink CoinNote Download/: CommandLine.c  EiteFirmwareCommandLine.c
PAYLINK SETUP FILES/PayLink Distribution/SDK/: AESMessages.h  Aesimhei.inf  Aesimhei.sys  ImheiEvent.h  aesimhei.dcu  aesimhei.pas  ftdibus.inf  ftdiport.cat  ftdiport.inf  standard.cfg
PAYLINK SETUP FILES/PayLink Distribution/SDK/Examples/: ReadMe.txt
PAYLINK SETUP FILES/PayLink Distribution/SDK/Linux/LinuxDemo/pixmaps/: Makefile.am
PAYLINK SETUP FILES/PayLink Distribution/i386/: ftser2k.sys
(+208 files in other folders)
