## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

AESDemo_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

AESDemo_pixmaps_DATA = \
	AESDemo-icon.png\
	logogif.gif

EXTRA_DIST = $(AESDemo_pixmaps_DATA)
